Fixed pom structure