@@ -4,44 +4,13 @@
 	<groupId>com.biit</groupId>
 	<artifactId>form-runner-demo</artifactId>
 	<packaging>war</packaging>
-	<version>1.1.0-SNAPSHOT</version>
 	<name>Form Runner Add-on demo</name>
-
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>1.7</maven.compiler.source>
-		<maven.compiler.target>1.7</maven.compiler.target>
-		<vaadin.version>7.6.6</vaadin.version>
-		<vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
-		<jetty.plugin.version>9.2.3.v20140905</jetty.plugin.version>
-	</properties>
-
-    <!--     
-	<organization>
-		<name>My Name</name>
-		<url>https://github.com/mygithubaccount/MyComponent/</url>
-	</organization>
-    
-	<scm>
-		<url>git://github.com/mygithubaccount/MyComponent.git</url>
-		<connection>scm:git:git://github.com/mygithubaccount/MyComponent.git</connection>
-		<developerConnection>scm:git:ssh://git@github.com:/mygithubaccount/${ComponentClassName}.git</developerConnection>
-		<tag>MyComponent add-on for Vaadin</tag>
-	</scm>
-
-	<issueManagement>
-		<system>GitHub</system>
-		<url>https://github.com/mygithubaccount/MyComponent/issues</url>
-	</issueManagement>
-    -->
-
-	<licenses>
-		<license>
-			<name>Apache 2</name>
-			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-			<distribution>repo</distribution>
-		</license>
-	</licenses>
+	
+	<parent>
+		<groupId>com.biit</groupId>
+		<artifactId>form-runner-root</artifactId>
+		<version>1.1.0-SNAPSHOT</version>
+	</parent>
 
 	<repositories>
 		<repository>
@@ -158,14 +127,14 @@
 				<artifactId>vaadin-maven-plugin</artifactId>
 				<version>${vaadin.plugin.version}</version>
 				<configuration>
-					<extraJvmArgs>-Xmx512M -Xss1024k</extraJvmArgs>
+					<extraJvmArgs>-Xmx512M -Xss1024k -XX:PermSize=256M -XX:MaxPermSize=1024M</extraJvmArgs>
 					<webappDirectory>${basedir}/src/main/webapp/VAADIN/widgetsets</webappDirectory>
 					<hostedWebapp>${basedir}/src/main/webapp/VAADIN/widgetsets</hostedWebapp>
 					<noServer>true</noServer>
 					<persistentunitcachedir>${basedir}/target/tmp/gwt-unitCache</persistentunitcachedir>
 					<compileReport>false</compileReport>
 					<strict>true</strict>
-					<runTarget>http://localhost:8080/</runTarget>
+					<runTarget>http://localhost:8081/</runTarget>
 				</configuration>
 				<executions>
 					<!-- You are free to mark this as permanently ignored in Eclipse -->
